--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
   "manifest_version": 1,
   "action": {
     "title": "OBR EZD6 Character Sheet",
+    "popover": "/",
     "height": 720,
-    "width": 720,
+    "width": 720
   }
 }
